# qt-ai-quike-assistant-for-linux-kde

./: CMakeLists.txt  QtAiAssistant.flatpak  README.md  io.github.ader.QtAiAssistant.desktop  io.github.ader.QtAiAssistant.json  test_md.cpp
.github/workflows/: flatpak-release.yml
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  Conversation.cpp  Conversation.h  ConversationManager.cpp  ConversationManager.h  GlobalShortcutPortal.cpp  GlobalShortcutPortal.h  InstanceIpc.cpp  InstanceIpc.h  LlmClient.cpp  LlmClient.h
src/ui/: ChatWidget.cpp  ChatWidget.h  MainWindow.cpp  MainWindow.h  TrayIcon.cpp  TrayIcon.h
